syntax = "proto3";

package proto;

option go_package = "internal/app/grpc/proto";

import "google/protobuf/wrappers.proto";

message FixtureRequest {
  uint64 fixture_id = 1;
}

message HistoricalResultRequest {
  // The Home Team ID that the Result set relates to
  uint64 home_team_id = 1;
  // The Away Team ID that the Result set relates to
  uint64 away_team_id = 2;
  // The number of results to return
  uint32 limit = 3;
  // A filter to return Results before a specific date
  // RFC3339 formatted string i.e "2006-01-02T15:04:05Z07:00"
  string date_before = 4;
}

message SeasonFixtureRequest {
  uint64 season_id = 1;
  // RFC3339 formatted string i.e. "2006-01-02T15:04:05Z07:00"
  string date_from = 2;
  // RFC3339 formatted string i.e "2006-01-02T15:04:05Z07:00"
  string date_to = 3;
}

message SeasonRequest {
  // The Season ID that the Result set relates to
  int64 season_id = 1;
  // A filter to return Results before a specific date
  // RFC3339 formatted string i.e "2006-01-02T15:04:05Z07:00"
  string date_before = 2;
}

message TeamRequest {
  // The Team ID that the Result set relates to
  int64 team_id = 1;
  // The number of results to return. If limit is not set the whole Result set for the Team
  // will be returned
  google.protobuf.Int32Value limit = 2;
  // A filter to return Results before a specific date
  // RFC3339 formatted string i.e "2006-01-02T15:04:05Z07:00"
  string date_before = 3;
}