syntax = "proto3";

package proto;

option go_package = "internal/app/grpc/proto";

import "google/protobuf/wrappers.proto";
import "internal/app/grpc/proto/requests.proto";

service TeamService {
  rpc GetTeamByID(TeamRequest) returns (Team) {}
}

message Team {
  uint64 id = 1;
  string name = 2;
  google.protobuf.StringValue short_code = 3;
  uint64 country_id = 4;
  uint64 venue_id = 5;
  google.protobuf.BoolValue is_national_team = 6;
  google.protobuf.UInt64Value founded = 7;
  google.protobuf.StringValue logo = 8;
}
